[gd_scene load_steps=9 format=2]

[ext_resource path="res://Enemies/EnemyLizzard/lizard moves/lizard-move3.png" type="Texture" id=1]
[ext_resource path="res://Enemies/EnemyLizzard/lizard moves/lizard-move1.png" type="Texture" id=2]
[ext_resource path="res://Enemies/EnemyLizzard/lizard moves/lizard-move2.png" type="Texture" id=3]
[ext_resource path="res://Enemies/EnemyLizzard/EnemyLizzard.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "Run",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="CircleShape2D" id=3]
radius = 8.0

[sub_resource type="RectangleShape2D" id=4]

[node name="EnemyLizzard" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 4 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -6 )
frames = SubResource( 1 )
animation = "Jump"
playing = true

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Raycasts" type="Node2D" parent="."]

[node name="FloorLeft" type="RayCast2D" parent="Raycasts"]
position = Vector2( -5, 10 )
enabled = true
cast_to = Vector2( 0, 10 )

[node name="FloorRight" type="RayCast2D" parent="Raycasts"]
position = Vector2( 4, 10 )
enabled = true
cast_to = Vector2( 0, 10 )

[node name="WallLeft" type="RayCast2D" parent="Raycasts"]
position = Vector2( -4, 0 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 10 )

[node name="WallRight" type="RayCast2D" parent="Raycasts"]
position = Vector2( 4, 0 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 10 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
visible = false
position = Vector2( 0, 2 )
shape = SubResource( 3 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 4 )

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
